--- a/NEPath.vcxproj.filters
+++ b/NEPath.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="NEPath-master\NonEquidistant.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="NEPath-master\Connector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NEPath-master\Basic.h">
@@ -87,6 +90,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="NEPath-master\setup_NEPath.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="NEPath-master\Connector.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
