--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Find IPOPT
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(IPOPT REQUIRED ipopt)
+# find_package(PkgConfig REQUIRED)
+# pkg_check_modules(IPOPT REQUIRED ipopt)
 
 # Compiler definitions
 add_compile_definitions(
-    IncludeIpopt=1          # Enable IPOPT support
-    IncludeGurobi=0         # Disable Gurobi
+    # IncludeIpopt=0          # IPOPT support: 0-Disable / 1-Enable
+    # IncludeGurobi=0         # Gurobi support: 0-Disable / 1-Enable
     ENABLE_DIRECTION_PARALLEL  # Enable Raster/Zigzag support
 )
 
@@ -37,53 +37,55 @@ endif()
 
 # Include directories
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/NEPath-master
-    ${IPOPT_INCLUDE_DIRS}
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/external/clipper
+    # ${IPOPT_INCLUDE_DIRS}
 )
 
 # Collect NEPath source files
 set(NEPATH_SOURCES
-    NEPath-master/Basic.cpp
-    NEPath-master/Connector.cpp
-    NEPath-master/ContourParallel.cpp
-    NEPath-master/Curve.cpp
-    NEPath-master/DirectionParallel.cpp
-    NEPath-master/FileAgent.cpp
-    NEPath-master/NEPathPlanner.cpp
-    NEPath-master/PlanningOptions.cpp
-    NEPath-master/clipper.cpp
-    NEPath-master/path.cpp
-    NEPath-master/NonEquidistant.cpp  # Included with IPOPT support
+    src/Basic.cpp
+    src/Connector.cpp
+    src/ContourParallel.cpp
+    src/Curve.cpp
+    src/DirectionParallel.cpp
+    src/FileAgent.cpp
+    src/NEPathPlanner.cpp
+    src/PlanningOptions.cpp
+    src/path.cpp
+    external/clipper/clipper.cpp
+    src/NonEquidistant.cpp
 )
 
-# Demo sources
-set(DEMO_SOURCES
-    demos.cpp
-)
+# # Demo sources
+# set(DEMO_SOURCES
+#     demos.cpp
+# )
 
 # Create test_demos executable
 add_executable(test_demos
-    main.cpp
+    # main.cpp
+    examples/demo_Raster.cpp
     ${NEPATH_SOURCES}
     ${DEMO_SOURCES}
 )
 
-# Link IPOPT libraries
-target_link_libraries(test_demos
-    ${IPOPT_LIBRARIES}
-    ${CMAKE_DL_LIBS}
-)
+# # Link IPOPT libraries
+# target_link_libraries(test_demos
+#     ${IPOPT_LIBRARIES}
+#     ${CMAKE_DL_LIBS}
+# )
 
-# Add IPOPT link directories
-target_link_directories(test_demos PRIVATE
-    ${IPOPT_LIBRARY_DIRS}
-)
+# # Add IPOPT link directories
+# target_link_directories(test_demos PRIVATE
+#     ${IPOPT_LIBRARY_DIRS}
+# )
 
 message(STATUS "============= Build Configuration =============")
 message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "C++ Standard: C++${CMAKE_CXX_STANDARD}")
-message(STATUS "IPOPT Include Dirs: ${IPOPT_INCLUDE_DIRS}")
-message(STATUS "IPOPT Library Dirs: ${IPOPT_LIBRARY_DIRS}")
-message(STATUS "IPOPT Libraries: ${IPOPT_LIBRARIES}")
+# message(STATUS "IPOPT Include Dirs: ${IPOPT_INCLUDE_DIRS}")
+# message(STATUS "IPOPT Library Dirs: ${IPOPT_LIBRARY_DIRS}")
+# message(STATUS "IPOPT Libraries: ${IPOPT_LIBRARIES}")
 message(STATUS "=======================================")
