--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,10 @@ add_executable(demo_CP_DFS
     examples/demo_CP_DFS.cpp
     ${NEPATH_SOURCES}
 )
+add_executable(demo_tool_compensate
+    examples/demo_tool_compensate.cpp
+    ${NEPATH_SOURCES}
+)
 
 # # Link IPOPT libraries
 # target_link_libraries(test_demos
